@startuml
'https://plantuml.com/class-diagram

class Company {
  -String designation
  +getShipStore()
}

class Ship {
    -Integer mmsi
    -String vesselName
    -Integer imo
    -Integer callSign
    -String type
    -Double length
    -Double width
    -Double draft
    +List<Ship>getShips()
}

class ShipCaptain{
    -String name
    -Email email
}

Company "1" --> "1..*"Ship : has registered >
Company "1" --> "1..*" ShipCaptain : has registered >
ShipCaptain "1..*" --> "1..*" Ship : wants to know center's mass of ships >

@enduml